translation-tool/inputs/source_meta/objects/Order_Offer__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Modify</fullName>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Seasonal Suspension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_On_Upfront_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add On Upfront Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Antenna_Size__c</fullName>
        <label>Antenna Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availibility__c</fullName>
        <label>Availability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Band__c</fullName>
        <label>Band</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beam_ID__c</fullName>
        <label>Beam ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Bytes__c</fullName>
        <label>Bonus Bytes (2am - 8am) (GB/Month)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Model__c</fullName>
        <label>Business Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ConsumerVAR</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                    <default>true</default>
                    <label>Residential</label>
                </value>
                <value>
                    <fullName>SOHO</fullName>
                    <label>SME</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBC_ID__c</fullName>
        <label>Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Notes__c</fullName>
        <label>Cancel Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason_Code__c</fullName>
        <label>Cancel Reason Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason_Description__c</fullName>
        <label>Cancel Reason Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Order Offers</relationshipLabel>
        <relationshipName>Order_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Offers</relationshipLabel>
        <relationshipName>Order_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustReq_InstRep_Date__c</fullName>
        <label>Customer Req Install/Repair Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Company_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Company Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Offers</relationshipLabel>
        <relationshipName>Order_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Order_ID__c</fullName>
        <displayFormat>2{0000000}</displayFormat>
        <label>Customer Order ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>DSS_Order_ID__c</fullName>
        <label>DSS Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSS_Program_Code__c</fullName>
        <label>DSS Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Allowance_Manager__c</fullName>
        <label>Data Allowance Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Price_With_Tax__c</fullName>
        <label>Display Price With Tax</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Display_Price__c</fullName>
        <label>Display Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DistributorPartnerId__c</fullName>
        <label>Distributor Partner Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Download_Speed__c</fullName>
        <label>Download Speed (Mbps)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSO_Details__c</fullName>
        <label>FSO Details</label>
        <length>10</length>
        <referenceTo>HNSSERVICEORDERVIEW__x</referenceTo>
        <relationshipLabel>Order Offers</relationshipLabel>
        <relationshipName>Order_Offers</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>FSO_ID__c</fullName>
        <label>FSO ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Segment__c</fullName>
        <label>GL Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNS_Location_ID__c</fullName>
        <label>HNS Location ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_FSO_Id__c</fullName>
        <formula>IF( OR(ISNULL(FSO_ID__c ),ISBLANK(FSO_ID__c )),&apos;false&apos;,&apos;true&apos;)</formula>
        <label>Has FSO Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates if the Order Offer is the latest order offer for the SAN.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Postal_Mail_Required_for_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Postal Mail Required for Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Account__c</fullName>
        <label>Location Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Offers (Location Account)</relationshipLabel>
        <relationshipName>Order_Offers1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ODU_Power__c</fullName>
        <label>ODU Power</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Description__c</fullName>
        <label>Offer Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Name__c</fullName>
        <label>Offer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Offer</label>
        <referenceTo>Offers__c</referenceTo>
        <relationshipLabel>Order Offers</relationshipLabel>
        <relationshipName>Order_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderStatus__c</fullName>
        <formula>IF( 
AND( 
OR( 
OR( ISPICKVAL(Location_Account__r.Location_Status__c,&apos;Active&apos;), ISPICKVAL(Location_Account__r.Location_Status__c,&apos;Delinquent&apos;)), 
OR( ISPICKVAL(Location_Account__r.Location_Status__c,&apos;Seasonal Suspended&apos;) , ISPICKVAL(Location_Account__r.Location_Status__c,&apos;Locked&apos;))), 
OR(ISPICKVAL(Action__c , &apos;Terminate&apos;), NOT(ISNULL( Location_Account__r.Termination_Effective_Date__c)))), 
&apos;Termination Pending&apos;,
IF(AND( 
OR( ISPICKVAL(Location_Account__r.Location_Status__c, &apos;&apos;), ISPICKVAL(Location_Account__r.Location_Status__c, &apos;Pending&apos;)), 
    ISPICKVAL(Action__c , &apos;Modify&apos;)), 
  &apos;Pending&apos;, 
IF(AND( 
 ISPICKVAL(Location_Account__r.Location_Status__c, &apos;&apos;), 
 ISPICKVAL(Action__c ,&apos;New&apos;)), 
 &apos;Incomplete&apos;,
IF(AND( 
 ISPICKVAL(Location_Account__r.Location_Status__c, &apos;Pending&apos;), 
 ISPICKVAL(Action__c ,&apos;New&apos;)), 
 &apos;Pending&apos;,
IF(AND 
(OR( ISPICKVAL(Location_Account__r.Location_Status__c, &apos;&apos;), ISPICKVAL(Location_Account__r.Location_Status__c,&apos;Pending&apos;)) , 
(ISPICKVAL(Action__c ,&apos;Cancel&apos;) )) , 
&apos;Cancel Pending&apos;, 
IF( 
(ISPICKVAL(Location_Account__r.Location_Status__c,&apos;Canceled&apos;)), 
&apos;Canceled&apos;,  
IF( 
( ISPICKVAL(Location_Account__r.Location_Status__c,&apos;Inactive&apos;)), 
&apos;Terminated&apos;, 
IF( 
AND( 
(ISPICKVAL(Location_Account__r.Location_Status__c,&apos;Active&apos;)), 
OR(ISPICKVAL(Action__c ,&apos;Modify&apos;) ,ISPICKVAL(Action__c , &apos;Upgrade&apos;),ISPICKVAL(Action__c , &apos;New&apos;)) ), 
&apos;Active&apos;, 
IF( 
AND(( ISPICKVAL(Location_Account__r.Location_Status__c,&apos;Seasonal Suspended&apos;)), 
OR(ISPICKVAL(Action__c ,&apos;Modify&apos;) , ISPICKVAL(Action__c ,&apos;Upgrade&apos;),ISPICKVAL(Action__c , &apos;New&apos;))), 
&apos;Seasonal Suspended&apos;, 
IF( 
AND( 
(ISPICKVAL(Location_Account__r.Location_Status__c,&apos;Delinquent&apos;)), 
OR(ISPICKVAL(Action__c , &apos;Modify&apos;) , 
ISPICKVAL(Action__c ,&apos;Upgrade&apos;),ISPICKVAL(Action__c , &apos;New&apos;))), 
&apos;Delinquent&apos;, 
IF( 
AND( 
(ISPICKVAL(Location_Account__r.Location_Status__c,&apos;Locked&apos;)), 
OR(ISPICKVAL(Action__c ,&apos;Modify&apos;), 
ISPICKVAL(Action__c ,&apos;Upgrade&apos;),ISPICKVAL(Action__c , &apos;New&apos;))), 
&apos;Locked&apos;,&apos;None&apos;)))))))))))</formula>
        <label>OrderStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Received_Date__c</fullName>
        <label>Order Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PIN__c</fullName>
        <label>PIN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pannel9849__c</fullName>
        <description>##Conga created btn:00bS0000000NprF</description>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=00PS0000001Po7l&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <label>Pannel9849</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peak_Hour_Data_Allowance__c</fullName>
        <label>Peak Hour Data Allowance (GB/Month)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Contract_Number__c</fullName>
        <label>Physical Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Polarization__c</fullName>
        <label>Polarization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protocol_ID__c</fullName>
        <label>Protocol ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAN__c</fullName>
        <formula>Location_Account__r.SAN__c</formula>
        <label>SAN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Partner_Id__c</fullName>
        <label>SP Partner Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Satellite_ID__c</fullName>
        <label>Satellite ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Customer_ID__c</fullName>
        <label>Source Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Data_Allowance__c</fullName>
        <label>Total Data Allowance (GB/Month)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transport_Name__c</fullName>
        <label>Transport Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Speed__c</fullName>
        <label>Upload Speed (Mbps)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WORK_FLOW_FOR_123_c__c</fullName>
        <description>##Conga created btn:00bS0000000NprF</description>
        <formula>null</formula>
        <label>WORK_FLOW_FOR_123__c</label>
        <type>Text</type>
    </fields>
    <label>Order Offer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Action__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Business_Model__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ORDOFR - {0000000000}</displayFormat>
        <label>Order Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>